--- a/index.html
+++ b/index.html
@@ -3,72 +3,20 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Cecilia Song | Core Interaction D FA20</title>
+<title>When Storm Comes</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="css/main.css">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather&family=Merriweather+Sans:wght@300..800">
-
-  <!-- Place favicon.ico in the root directory -->
-
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-  <link href="css/style.css" rel="stylesheet" type="text/css">
-  <meta name="theme-color" content="#fafafa">
 </head>
-
 <body>
+	<h1> When Storm Comes</h1>
 
-  <main>
+	<footer> 
+		<ul>
+          <li><a href="1.html">click here to start</a></li>
+      </ul>
+</footer>
 
-    <section class="intro-block">
-      <h1>Cecilia Song</h1>
-      <p class="location">Las Vegas, NV</p>
-      <h3>CORE 1 INTERACTION D FA20</h3>
-
-      <figure>
-        <img src="img/WechatIMG1042.jpeg" style="width:100%">
-        <figcaption>Day Dream Wandering</figcaption>
-      </figure> 
-    </section>
-  
-  
-      <section class="statement">
-<P>Cecilia Song, undergraduate student at Parsons School of Design, studying in Communication Design. Locations: Las Vegas, Nevada. New York, New York.| U.S.A Guangzhou.| China</P>
-
-<P>Tools: photoshop/illustrator/premier/after effects/indesign 
-Languages: Mandarin/English</P>
-  </section>
-  <section class="projects">
-    <h3>Projects / assignments</h3>
-    <ul>
-      <li><a href="projects/type-variations/index.html">Type-variations</a></li>
-      <li><a href="projects/collection/living-collection.html">Living-collection</a></li>
-      <li><a href="projects/p5js/index.html">p5js</a></li>
-      <li><a href="projects/poster/index.html">poster</a></li>
-
-    </ul>
-  </section>
-    </main>
-
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
-
 </html>
