--- a/2.html
+++ b/2.html
@@ -3,11 +3,31 @@
 
 <head>
   <meta charset="utf-8">
-<title>When Storm Comes</title>
-
+  <title>When Storm Comes</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta property="og:title" content="">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="">
+
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather&family=Merriweather+Sans:wght@300..800">
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/2.css">
+  <meta name="theme-color" content="#fafafa">
+</head>
+
+<style>
+body {
+  background-image: url("img/7.png");
+}
+</style>
+
 
 </head>
 <body>
