--- a/3.html
+++ b/3.html
@@ -1,19 +1,37 @@
 <!doctype html>
+<!doctype html>
 <html class="no-js" lang="">
 
 <head>
   <meta charset="utf-8">
-<title>When Storm Comes</title>
+  <title>When Storm Comes</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="css/3.css">
 
+  <meta property="og:title" content="">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="">
+
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather&family=Merriweather+Sans:wght@300..800">
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/3.css">
+  <meta name="theme-color" content="#fafafa">
 </head>
+
+<style>
+body {
+  background-image: url("img/7.png");
+}
+</style>
+
 <body>
 	
 	<iframe width="1008" height="567" src="https://www.youtube.com/embed/-uc-5wgTHTE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<h1> A big tornado! It crushes everything too soon and you have nothing to do but close your eyes and grab your food bag tighter.</h1>
-	<footer> 
 		<ul>
           <li><a href="4.html">What happen next?</a></li>
       </ul>
