--- a/4.html
+++ b/4.html
@@ -3,15 +3,33 @@
 
 <head>
   <meta charset="utf-8">
-<title>When Storm Comes</title>
+  <title>When Storm Comes</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="css/4.css">
 
+  <meta property="og:title" content="">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="">
+
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather&family=Merriweather+Sans:wght@300..800">
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/4.css">
+  <meta name="theme-color" content="#fafafa">
 </head>
+
+<style>
+body {
+  background-image: url("img/7.png");
+}
+</style>
+
 <body>
 	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d51488.79037006919!2d-115.3513297786806!3d36.23829397227043!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c894e37ffca489%3A0xce6add6dd3a98780!2sLone%20Mountain!5e0!3m2!1sen!2sus!4v1611809029896!5m2!1sen!2sus" width="900" height="675" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-	<h1> When reopening your eyes, you are in the middle of ruins. Luckily, you still have all the food and suppies in the bag with you. Now you are gonna use all these things to survive and reconstruct your home. </h1>
 
 	<footer> 
 		<ul>
