--- a/1.html
+++ b/1.html
@@ -3,19 +3,53 @@
 
 <head>
   <meta charset="utf-8">
-<title>When Storm Comes</title>
+  <title>When Storm Comes</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="css/1.css">
 
+  <meta property="og:title" content="">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="">
+
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather&family=Merriweather+Sans:wght@300..800">
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/1.css">
+  <meta name="theme-color" content="#fafafa">
 </head>
+
+<style>
+body {
+  background-image: url("img/7.png");
+}
+</style>
+
 <body>
-	<h1> One day you wake up from darkness, and you hear this:</h1>
-	<iframe src="https://open.spotify.com/embed/track/2nr2nZscQKGywtgHTUj1b7" width="594" height="752.4" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-	<h2>you are in a grocery store!
-now you receive a task: </h2>
+  <div class="wrap">
+  <section class="spo">
+  <iframe src="https://open.spotify.com/embed/track/2nr2nZscQKGywtgHTUj1b7" width="400" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+ </section>
+
+  <section class="pin">
+  <iframe src="https://assets.pinterest.com/ext/embed.html?id=391883605061443295" height="620" width="400" frameborder="0" scrolling="no" ></iframe>
+ </section>
+
+ <section class="grocery">
+ <iframe src="https://assets.pinterest.com/ext/embed.html?id=611645193140877361" height="783" width="450" frameborder="0" scrolling="no" ></iframe>
+ </section>
+
+ <section class="store">
+ <iframe src="https://assets.pinterest.com/ext/embed.html?id=611645193140829980" height="850" width="450" frameborder="0" scrolling="no" ></iframe>
+</section>
+
+ </div>
+
 <footer> 
-		<ul>
+    <ul>
           <li><a href="2.html">What's the task?</a></li>
       </ul>
 </footer>
